comments added for the loop to find the total flux for all galaxy

--- a/H-alpha_flux.ipynb
+++ b/H-alpha_flux.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_list = QTable.read(\"DRPall-master_file.txt\", format=\"ascii.ecsv\")\n",
-    "gbtHI = Table.read('mangaHIall.fits', format='fits')\n",
-    "alfaHI = Table.read('manga_dr15_alfalfa.fits', format='fits')\n",
+    "master_list = QTable.read(\"data/DRPall-master_file.txt\", format=\"ascii.ecsv\")\n",
+    "gbtHI = Table.read('data/mangaHIall.fits', format='fits')\n",
+    "alfaHI = Table.read('data/manga_dr15_alfalfa.fits', format='fits')\n",
     "maps = fits.open('data/manga-10001-12701-MAPS-HYB10-GAU-MILESHC.fits', format = 'fits')\n",
     "#map_filename = 'data/manga-' + galID[i] + '-MAPS-HYB10-GAU-MILESHC.fits'\n",
     "#maps = fits.open(map_filename, format = 'fits')"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "1898.2083"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,14 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>QTable length=4514</i>\n",
-       "<table id=\"table2802270587824\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table2791780018832\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>MaNGA_plate</th><th>MaNGA_IFU</th><th>NSAID</th><th>ra</th><th>dec</th><th>redshift</th><th>ba</th><th>phi</th><th>Mstar</th><th>rabsmag</th><th>plate</th><th>MJD</th><th>fiberID</th><th>index</th><th>imc</th><th>aimc</th><th>smoothness_score</th><th>logHI</th><th>WF50</th><th>WP20</th><th>galID</th><th>FHI</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th>solMass</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>dex(solMass)</th><th>km / s</th><th>km / s</th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bytes12</th><th>float64</th></tr></thead>\n",
@@ -272,7 +272,7 @@
        "       9871      9101 340725 ...  9871-9101                nan"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -306,6 +306,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##Possible issues: I'm using the smaller table so how would the galID[i] work in that case? \n",
+    "                #It wouldn't find all the galIDs I think? so do I need an if statement?\n",
+    "\n",
     "# for i in range(len(masterList)):\n",
     "#     map_filename = 'data/manga-' + masterList['galID'][i] + '-MAPS-HYB10-GAU-MILESHC.fits'\n",
     "#     maps = fits.open(map_filename, format = 'fits')\n",
